--- a/base/src/sass/index.scss
+++ b/base/src/sass/index.scss
@@ -9,6 +9,7 @@
 @import 'widget/nav/_footer';
 @import 'page/_home';
 @import 'page/_contacts';
+@import 'page/_about';
 // @import 'widget/common/_star';
 // @import 'widget/swiper/_mySwiper';
 // @import 'widget/popup/_buyPopup';
