--- a/base/src/sass/index.scss
+++ b/base/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import 'base/_reset';
 @import 'base/_border';
 
+@import 'widget/common/_routerTransition';
 @import 'widget/common/_common';
 @import 'widget/layout/_content';
 @import 'widget/nav/_topBar';
