--- a/base/src/sass/index.scss
+++ b/base/src/sass/index.scss
@@ -11,6 +11,7 @@
 @import 'page/_home';
 @import 'page/_contacts';
 @import 'page/_about';
+@import 'page/_login';
 // @import 'widget/common/_star';
 // @import 'widget/swiper/_mySwiper';
 // @import 'widget/popup/_buyPopup';
