--- a/base/src/sass/widget/common/_common.scss
+++ b/base/src/sass/widget/common/_common.scss
@@ -54,6 +54,19 @@
 .ellipsisLn3{
     @include ellipsisLn(3);
 }
+.coolInput{
+    border:1px solid #f5f5f5;
+    background-color: #fff;
+    color: #000;
+    -webkit-appearance: none;
+    outline: deepskyblue;
+    border-radius: 5px;
+    transition: all 1s;
+    &:focus{
+        background-color: black;
+        color: #fff;
+    }
+}
 
 // @for $i from 1 through 5{
 //     $tmp : $i * 2;
