--- a/base/src/sass/base/_reset.scss
+++ b/base/src/sass/base/_reset.scss
@@ -23,5 +23,10 @@ a{
 }
 .clearfix:before,.clearfix:after{content:" ";display:table}
 .clearfix:after{clear:both}
-*,:after,:before{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box}
+*,:after,:before{
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    box-sizing:border-box;
+    -webkit-tap-highlight-color: transparent;
+}   
 input,textarea{-webkit-appearance:none}
