--- a/base/src/sass/page/_contacts.scss
+++ b/base/src/sass/page/_contacts.scss
@@ -14,6 +14,7 @@
                 margin-left:10px;
                 height: 100%;
                 border: none;
+                padding-left:0.5em;
             }
         }
     }
