--- a/base/src/sass/base/_fn.scss
+++ b/base/src/sass/base/_fn.scss
@@ -1,6 +1,8 @@
 // mixin
 @import 'mixin/mobile';
 @import 'mixin/setOnepx';
+@import 'mixin/setTriangular';
+@import 'mixin/setArrow';
 @import 'mixin/text';
 @import 'mixin/position';
 
