--- a/base/src/sass/base/_border.scss
+++ b/base/src/sass/base/_border.scss
@@ -1,13 +1,16 @@
 @import '_fn';
 .borderT{
-    @include setTopLineAfter();
+    @include borderTopAfter();
 }
 .borderB{
-    @include setBottomLineAfter();
+    @include borderBottomAfter();
 }
 .borderL{
-    @include setLeftLineAfter();
+    @include borderLeftAfter();
 }
 .borderR{
-    @include setRightLineAfter();
+    @include borderRightAfter();
+}
+.borderAll{
+    @include borderAllAfter();
 }
