--- a/base/src/sass/base/_reset.scss
+++ b/base/src/sass/base/_reset.scss
@@ -4,16 +4,10 @@ body{
     max-width: $maxWidth;
     margin: 0 auto;
     overflow-x: hidden;
-    font-size: 14px;
+    font-size: $baseFontSize;
 }
 ul,li{
-    padding:0;
-    margin: 0;
     list-style: none;
-}
-p{
-    margin:0;
-    padding:0;
 }
 img {
     max-width: 100%;
@@ -21,12 +15,21 @@ img {
 a{
     text-decoration:none;
 }
-.clearfix:before,.clearfix:after{content:" ";display:table}
-.clearfix:after{clear:both}
+
+.clearfix:after {
+        clear: both;
+        content: '.';
+        display: block;
+        height: 0;
+        line-height: 0;
+        overflow: hidden;
+}
 *,:after,:before{
+    margin:0;
+    padding:0;
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
     box-sizing:border-box;
     -webkit-tap-highlight-color: transparent;
-}   
-input,textarea{-webkit-appearance:none}
+}
+input,textarea{-webkit-appearance:none;border-radius: 0}
