--- a/base/src/sass/widget/common/_routerTransition.scss
+++ b/base/src/sass/widget/common/_routerTransition.scss
@@ -1,4 +1,25 @@
 .example-enter {
+    z-index: 1024;
+    opacity: 0.01;
+    transform: translate3d(100%, 0, 0);
+    transition: all .2s ease;
+    &.example-enter-active {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.example-leave {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+    transition: all .2s ease;
+    &.example-leave-active {
+        opacity: 0.01;
+        transform: translate3d(100%, 0, 0);
+    }
+}
+/*
+.example-enter {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
   -webkit-animation-fill-mode: both;
@@ -117,3 +138,4 @@
     transform: translate3d(-2000px, 0, 0);
   }
 }
+*/
