--- a/base/src/sass/widget/nav/_topBar.scss
+++ b/base/src/sass/widget/nav/_topBar.scss
@@ -9,5 +9,5 @@
     background-color: #f8f8f8;
     text-align: center;
     font-size: 16px;
-    @include setBottomLineAfter();
+    @include borderBottomAfter();
 }
