优化切换页面时的动画

--- a/base/src/sass/base/_reset.scss
+++ b/base/src/sass/base/_reset.scss
@@ -1,4 +1,8 @@
 @import '_fn';
+html,body,.container{
+    height: 100%;
+    background-color: #f8f8f8;
+}
 body{
     font-family: $baseFont;
     max-width: $maxWidth;
