--- a/base/src/sass/widget/nav/_footer.scss
+++ b/base/src/sass/widget/nav/_footer.scss
@@ -6,6 +6,7 @@
     right: 0;
     height: $footerNavHeight;
     background-color: #f8f8f8;
+    z-index: 1;
     ul{
         display: flex;
         height: 100%;
