--- a/base/src/sass/page/_login.scss
+++ b/base/src/sass/page/_login.scss
@@ -4,45 +4,38 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	h2{
-		margin-bottom: 40px;
-		margin-top: 0;
-		color: #fffefe;
-		background: #adadad;
-		width: 100%;
-		height: 100px;
-		text-align: center;
-		line-height: 100px;
-		transform: skewY(-10deg);
+	img{
+		width: 86px;
+		margin-top:90px;
+		border-radius: 5px;
 	}
-	&>div{
-		margin-bottom:0.5em;
+	h5{
+		font-size: 16px;
+		margin-top:0.75em;
+	}
+	label{
+		display: flex;
+		margin-left:6%;
+		width: 94%;
+		padding:0.5em 0;
+		border-bottom:1px solid #d3d3d3;
+		font-size: 14px;
+		font-weight: bold;
+		margin-bottom: 26px;
 	}
 	input{
-		padding:3px 0 3px 0.75em;
-		width: 180px;
-		transition: all 1s;
-		&:focus{
-			width: 200px;
-		}
+		flex: 1;
+		padding:3px 0 3px 3em;
+		border: none;
+		outline: none;
+		background-color: transparent;
 	}
 	button{
-		-webkit-user-select: none;
-		margin-top:10px;
-		border: 3px solid #e8e8e8;
-    	padding: 5px 30px;
-    	border-radius: 3px;
-    	background-color: #f8f8f8;
-		color: #555;
-		outline: none;
-		transition:all 0.3s;
-		&:active{
-			border-color: #666;
-			padding:5px 33px;;
-		}
+		width: 90%;
 	}
 	p{
-		font-size: 12px;
-		color: #555;
+		margin-top: 20px;
+		font-size: 14px;
+		color: #5792b2;
 	}
 }
