--- a/base/src/sass/widget/common/_routerTransition.scss
+++ b/base/src/sass/widget/common/_routerTransition.scss
@@ -1,24 +1,23 @@
 //"进入的页面"直接切换到"离开的页面"动画(等于无动画)
 .pageTranstion-A{
   &.pageAnimation-enter {
-      z-index: 1024;
+      z-index: 1023;
       opacity: 1;
-      transform: translate3d(100%, 0, 0);
-      transition: all 0.5s ease;
+      transform: translate3d(0, 0, 0);
+      transition: all 0.3s ease;
       &.pageAnimation-enter-active {
-          opacity: 1;
           transform: translate3d(0, 0, 0);
+          opacity: 1;
       }
   }
 
   &.pageAnimation-leave {
-      z-index: 1024;
       opacity: 1;
       transform: translate3d(0, 0, 0);
-      transition: all 0.5s ease;
+      transition: all 0.4s ease;
       &.pageAnimation-leave-active {
-          opacity: 0.01;
-          transform: translate3d(100%, 0, 0);
+          transform: translate3d(0, 0, 0);
+          opacity: 1;
       }
   }
 }
