--- a/base/src/sass/index.scss
+++ b/base/src/sass/index.scss
@@ -2,12 +2,13 @@
 @import 'base/_reset';
 @import 'base/_border';
 
-@import 'widget/common/_routerTransition';
-@import 'widget/common/_common';
-@import 'widget/layout/_content';
-@import 'widget/nav/_topBar';
-@import 'widget/nav/_footer';
-@import 'page/_home';
-@import 'page/_contacts';
-@import 'page/_about';
-@import 'page/_login';
+// @import 'widget/common/_routerTransition';
+@import 'common/_common';
+// @import 'widget/layout/_content';
+// @import 'widget/nav/_topBar';
+// @import 'widget/nav/_footer';
+@import 'widget/_alert';
+@import 'page/_yys';
+// @import 'page/_contacts';
+// @import 'page/_about';
+// @import 'page/_login';
