--- a/base/src/sass/page/_yys.scss
+++ b/base/src/sass/page/_yys.scss
@@ -3,6 +3,7 @@
 html, body, .container{
     background-color: #745529;
     max-width: 1024px;
+    // background: url(~srcPath/img/yys_bg.jpg);
 }
 .shakeTree{
 	overflow: hidden;
