--- a/base/src/sass/base/_fn.scss
+++ b/base/src/sass/base/_fn.scss
@@ -6,5 +6,8 @@
 @import 'mixin/text';
 @import 'mixin/position';
 
+// function
+@import 'function/pxTorem';// _(75)
+
 // variable
 @import 'variable/global';
