--- a/base/src/sass/base/mixin/_setTriangular.scss
+++ b/base/src/sass/base/mixin/_setTriangular.scss
@@ -1,9 +1,8 @@
-/* 三角型
-triangular(direction,size,color);
-方向:direction
-大小:size
-颜色:color
-*/
+// 三角型
+// triangular(direction,size,color);
+// 方向:direction
+// 大小:size
+// 颜色:color
 
 @import '../variable/_global';
 $triangularColor:$borderColor_default !default;
