--- a/base/src/sass/base/variable/_global.scss
+++ b/base/src/sass/base/variable/_global.scss
@@ -1,4 +1,8 @@
-$maxWidth:640px;
+//设计图大小（用于px->rem）
+$designPlane:750;//像素
+
+//page
+$maxWidth:768px;
 $baseFont:"Arial", "Helvetica", "sans-serif","Microsoft YaHei";
 $baseFontSize:14px !default;
 $baseFontColor:#3d4145 !default;
