--- a/base/src/sass/base/variable/_global.scss
+++ b/base/src/sass/base/variable/_global.scss
@@ -5,7 +5,7 @@ $designPlane:750;//像素
 $maxWidth:768px;
 $baseFont:"Arial", "Helvetica", "sans-serif","Microsoft YaHei";
 $baseFontSize:14px !default;
-$baseFontColor:#3d4145 !default;
+$baseFontColor:#f3f3f3 !default;
 //整体
 $topBarHeight:3rem !default;
 $footerNavHeight:2.5rem !default;
