--- a/base/src/sass/base/mixin/_setArrow.scss
+++ b/base/src/sass/base/mixin/_setArrow.scss
@@ -21,23 +21,22 @@ $arrowColor:$borderColor_default !default;
     @include _setArrow($arrowsize, $color, $borderWidth);
     @if $direction == top {
         transform: matrix(0.71,-0.71,0.71,0.71,0,0); // rotate(-45deg)
+
+        position: relative;
     }
     @else if $direction == bottom {
         transform: matrix(-0.71,0.71,-0.71,-0.71,0,0); // rotate(135deg);
 
         position: relative;
-        top: -3px;
     }
     @else if $direction == right {
         transform: matrix(0.71,0.71,-0.71,0.71,0,0); // rotate(45deg);
 
         position: relative;
-        top: -2px;
     }
     @else if $direction == left {
         transform: matrix(-0.71,-0.71,0.71,-0.71,0,0); // rotate(-135deg);
 
         position: relative;
-        top: -2px;
     }
 }
