--- a/base/src/components/PersonalProfile/style/_PersonalProfile.scss
+++ b/base/src/components/PersonalProfile/style/_PersonalProfile.scss
@@ -208,6 +208,38 @@ img{
     }
 }
 
+.lzs-alert{
+    z-index: 99;
+    background: transparent;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .lzs-alert__content{
+        background-color: #f8f8f8;
+        width: _(520);
+        // height: _(320);
+        border-radius: _(8);
+        font-size: _(32);
+        color: #383838;
+        text-align: center;
+        .lzs-alert__content__cont{
+            padding: _(36) _(12);
+            line-height: 1.4;
+        }
+        .lzs-alert__content__btngroup{
+            @include borderTopBefore();
+            padding: _(24) 0;
+            color: #3b98d0;
+        }
+    }
+}
+
 html, body, .container{background-color: #333 !important;}
 #logo {
   stroke-dasharray: 2.42777px, 231.77666px;
